// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPopoverArrow position bottom is rendered 1`] = `
<div
  aria-label="aria-label"
  class="testClass1 testClass2 emotion-euiPopoverArrowWrapper-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiPopover__arrow emotion-euiPopoverArrow-bottom"
    data-popover-arrow="bottom"
  />
</div>
`;

exports[`EuiPopoverArrow position left is rendered 1`] = `
<div
  aria-label="aria-label"
  class="testClass1 testClass2 emotion-euiPopoverArrowWrapper-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiPopover__arrow emotion-euiPopoverArrow-left"
    data-popover-arrow="left"
  />
</div>
`;

exports[`EuiPopoverArrow position right is rendered 1`] = `
<div
  aria-label="aria-label"
  class="testClass1 testClass2 emotion-euiPopoverArrowWrapper-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiPopover__arrow emotion-euiPopoverArrow-right"
    data-popover-arrow="right"
  />
</div>
`;

exports[`EuiPopoverArrow position top is rendered 1`] = `
<div
  aria-label="aria-label"
  class="testClass1 testClass2 emotion-euiPopoverArrowWrapper-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiPopover__arrow emotion-euiPopoverArrow-top"
    data-popover-arrow="top"
  />
</div>
`;
